2009-06-31  Giulio Eulisse <giulio.eulisse@cern.ch>
	
	* IgProfAnalyse.cc: new report format which shows the 
	  stacktrace for the top 10 offenders in a given profile.

2009-06-30  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.cc: rewrote mergeToNode seems to behave 
	  correctly now. 
	  Fixes more issues with the --diff-mode, in particular now
	  it works correcty also in the case some caller / callee is 
	  not there in the baseline.

2009-06-29  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.cc: diff mode now shows percentage difference
	  between baseline and input.
	  It is also smart enough to recognize that a given function is
	  not there in the baseline and reports it as "new".

2009-06-26  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.h, IgProfAnalyse.cc, IgResolveSymbols.h: fix more 
	  indentation / formatting issues.

	* IgProfAnalyse.cc: fixes another regression in building reports
	  which was introduce by revision 1.70.

2009-06-25  Giulio Eulisse <giulio.eulisse@cern.ch>
	
	* IgProfAnalyse.cc: fixes regression due to usage of abs 
	  with int64_t. Changed to use llabs.
	
	* IgProfAnalyse.cc: revert back to use only one decimal
	  for flat profile output percentages, it simplifies regression
	  testing.

	* IgProfAnalyse.h: fixes formatting of negative numbers.

	* IgProfAnalyse.cc: fixes formatting of progress counter if
	  a baseline is specified.

	* IgProfAnalyzer.cc: Fixes regression reported by Pete.
	  The problem was that the logic to determine which counter
	  to pick up by default if no counters are specified has to
	  be moved right after the baseline is read in, otherwise
	  things fails if no explicit `-r PERF_TICKS` is specified.

	* IgProfAnalyzer.cc: remove useless static variable.

	* IgProfAnalyse.cc, IgProfAnalyse.h: massive indentation and
	  formatting fixes to align to whatever is used in
	  igprof / IgHook.

2009-06-23  Giulio Eulisse <giulio.eulisse@cern.ch>
